[workspace]
members = [
  "below/",
  "below/below_derive",
  "below/btrfs",
  "below/cgroupfs",
  "below/common",
  "below/config",
  "below/dump",
  "below/ethtool",
  "below/gpu_stats",
  "below/model",
  "below/procfs",
  "below/render",
  "below/resctrlfs",
  "below/store",
  "below/view",
]
resolver = "2"
