[workspace]
members = [
  "below/",
  "below/below_derive",
  "below/btrfs",
  "below/cgroupfs",
  "below/common",
  "below/config",
  "below/dump",
  "below/ethtool",
  "below/gpu_stats",
  "below/model",
  "below/procfs",
  "below/render",
  "below/resctrlfs",
  "below/store",
  "below/tc",
  "below/view",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/facebookincubator/below"
