[package]
name = "below"
version = "0.2.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "An interactive tool to view and record historical system data"
readme = "../../README.md"
repository = "https://github.com/facebookincubator/below"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
cgroupfs = { version = "0.2.0", path = "cgroupfs" }
common = { package = "below-common", version = "0.2.0", path = "common" }
config = { package = "below-config", version = "0.2.0", path = "config" }
cursive = { version = "0.16.0", features = ["crossterm", "termion"], default-features = false }
dump = { package = "below-dump", version = "0.2.0", path = "dump" }
libbpf-rs = "0.11.1"
libc = "0.2.86"
model = { package = "below-model", version = "0.2.0", path = "model" }
once_cell = "1.4"
plain = "0.2"
procfs = { package = "fb_procfs", version = "0.2.0", path = "procfs" }
regex = "1.4.2"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
signal-hook = "0.3"
slog = { version = "2.5", features = ["max_level_trace"] }
slog-async = "2.3"
slog-term = "2.4.2"
store = { package = "below-store", version = "0.2.0", path = "store" }
structopt = "0.3.21"
users = "0.11"
view = { package = "below-view", version = "0.2.0", path = "view" }
walkdir = "2.2.9"

[dev-dependencies]
futures = { version = "0.3.13", features = ["async-await", "compat"] }
maplit = "1.0"
rand = { version = "0.7", features = ["small_rng"] }
tempdir = "0.3"

[build-dependencies]
libbpf-cargo = "0.7.2"

[features]
enable_backtrace = []
