[package]
name = "below-store"
version = "0.3.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "Store crate for below"
repository = "https://github.com/facebookincubator/below"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
bytes = { version = "1.0", features = ["serde"] }
common = { package = "below-common", version = "0.3.0", path = "../common" }
config = { package = "below-config", version = "0.3.0", path = "../config" }
humantime = "1.3"
maplit = "1.0"
memmap = "0.7"
model = { package = "below-model", version = "0.3.0", path = "../model" }
nix = "0.20"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_cbor = "0.11"
slog = { version = "2.5", features = ["max_level_trace"] }
static_assertions = "1.1.0"
zstd = "=0.8.0+zstd.1.4.9"

[dev-dependencies]
itertools = "0.10.1"
lazy_static = "1.0"
paste = "1.0"
slog-term = "2.4.2"
tempdir = "0.3"
