[package]
name = "below-tc"
version = "0.0.1"
edition = "2021"

[dependencies]
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.19.0"
netlink-packet-utils = "0.5.2"
netlink-sys = "0.8.5"
nix = { version = "0.27.1",  features = ["net"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
