[package]
name = "resctl_below"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
description = "An interactive tool to view and record historical system data"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
readme = "../../README.md"
include = ["src/**/*.rs"]

[[bin]]
name = "below"
path = "src/main.rs"

[dependencies]
common = { package = "below-common", path = "common" }
dump = { package = "below-dump", path = "dump" }
model = { package = "below-model", path = "model" }
store = { package = "below-store", path = "store" }
below-thrift = { path = "if" }
view = { package = "below-view", path = "view" }
cgroupfs = { path = "../common/cgroupfs" }
procfs = { package = "fb_procfs", path = "../common/procfs" }
slog_glog_fmt = { git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master" }
stats = { git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master" }
anyhow = "1.0"
async-trait = "0.1.29"
cursive = { version = "0.15.0", default-features = false, features = ["crossterm", "termion"] }
libbpf-rs = "0.6.1"
libc = "0.2"
once_cell = "1.4"
plain = "0.2"
regex = "1.4.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_debug"] }
slog-async = "2.3"
slog-term = "2.4.2"
structopt = "0.3.21"
tokio = { version = "=0.2.13", features = ["full", "test-util"] }
toml = "=0.5.7"
walkdir = "2.2.9"

[dev-dependencies]
futures = { version = "0.3.5", features = ["async-await", "compat"] }
maplit = "1.0"
rand = { version = "0.7", features = ["small_rng"] }
tempdir = "0.3"
