[package]
name = "resctl_below"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
description = "An interactive tool to view and record historical system data"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
readme = "../../README.md"
include = ["src/**/*.rs"]

[[bin]]
name = "below"
path = "src/main.rs"

[dependencies]
common = { package = "below-common", path = "common", version = "0.1.0" }
dump = { package = "below-dump", path = "dump", version = "0.1.0" }
model = { package = "below-model", path = "model", version = "0.1.0" }
store = { package = "below-store", path = "store", version = "0.1.0" }
below-thrift = { path = "if", version = "0.1.0" }
view = { package = "below-view", path = "view", version = "0.1.0" }
cgroupfs = { path = "../common/cgroupfs", version = "0.1.0" }
procfs = { package = "fb_procfs", path = "../common/procfs", version = "0.1.0" }
slog_glog_fmt = { git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master", version = "0.1.0" }
stats = { git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master", version = "0.1.0" }
anyhow = "1.0"
async-trait = "0.1.29"
cursive = { version = "0.16.0", default-features = false, features = ["crossterm", "termion"] }
libbpf-rs = "0.6.1"
libc = "0.2"
once_cell = "1.4"
plain = "0.2"
regex = "1.4.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_debug"] }
slog-async = "2.3"
slog-term = "2.4.2"
structopt = "0.3.21"
tokio = { version = "0.2.24", features = ["full", "test-util"] }
toml = "=0.5.7"
walkdir = "2.2.9"

[dev-dependencies]
futures = { version = "0.3.5", features = ["async-await", "compat"] }
maplit = "1.0"
rand = { version = "0.7", features = ["small_rng"] }
tempdir = "0.3"
