[package]
name = "below_derive"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "Apache-2.0"
include = ["src/**/*.rs"]

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "visit-mut", "fold", "extra-traits"] }
