[package]
name = "common"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "Apache 2.0"
include = ["src/**/*.rs"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
cursive = { git = "https://github.com/gyscos/cursive", rev = "750a7af6c79946ba7c87253714a6957abdd8bfd3" }
humantime = "1.3"
once_cell = "1.4"
regex = "1.3.7"
slog = { version = "2.5", features = ["max_level_debug"] }
slog-term = "2.4.2"
