[package]
name = "below-common"
version = "0.1.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "Common below code"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
cursive = { version = "0.16.0", features = ["crossterm", "termion"], default-features = false }
humantime = "1.3"
once_cell = "1.4"
regex = "1.4.2"
slog = { version = "2.5", features = ["max_level_debug"] }
slog-term = "2.4.2"
