[package]
name = "below-dump"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
description = "Dump crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
include = ["src/**/*.rs"]

[dependencies]
common = { package = "below-common", path = "../common", version = "0.1.0" }
model = { package = "below-model", path = "../model", version = "0.1.0" }
render = { package = "below-render", path = "../render", version = "0.1.0" }
store = { package = "below-store", path = "../store", version = "0.1.0" }
below_derive = { path = "../below_derive", version = "0.1.0" }
anyhow = "1.0"
once_cell = "1.4"
regex = "1.4.2"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_debug"] }
structopt = "0.3.21"
toml = "=0.5.7"
