[package]
name = "below-dump"
version = "0.1.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "Dump crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
below_derive = { path = "../below_derive", version = "0.1.0" }
common = { package = "below-common", path = "../common", version = "0.1.0" }
model = { package = "below-model", path = "../model", version = "0.1.0" }
once_cell = "1.4"
regex = "1.4.2"
render = { package = "below-render", path = "../render", version = "0.1.0" }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_debug"] }
store = { package = "below-store", path = "../store", version = "0.1.0" }
structopt = "0.3.21"
toml = "=0.5.7"
