[package]
name = "below-dump"
version = "0.2.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "Dump crate for below"
repository = "https://github.com/facebookincubator/below"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
below_derive = { version = "0.2.0", path = "../below_derive" }
common = { package = "below-common", version = "0.2.0", path = "../common" }
model = { package = "below-model", version = "0.2.0", path = "../model" }
once_cell = "1.4"
regex = "1.4.2"
render = { package = "below-render", version = "0.2.0", path = "../render" }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_trace"] }
store = { package = "below-store", version = "0.2.0", path = "../store" }
structopt = "0.3.21"
toml = "=0.5.7"
