[package]
name = "below_thrift"
version = "0.1.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "Thrift definitions for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
license = "Apache-2.0"
include = ["thrift_lib.rs"]
build = "thrift_build.rs"

[lib]
path = "thrift_lib.rs"

[build-dependencies]
thrift_compiler = { git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master", version = "0.1.0" }

[dependencies]
anyhow = "1.0"
async-trait = "0.1.29"
cgroupfs_thrift = { path = "../../common/cgroupfs/if", version = "0.1.0" }
codegen_includer_proc_macro = { git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master", version = "0.1.0" }
const-cstr = "0.3.0"
fbthrift = { git = "https://github.com/facebook/fbthrift.git", branch = "master", version = "0.0.1+unstable" }
futures = { version = "0.3.5", features = ["async-await", "compat"] }
lazy_static = "1.0"
procfs_thrift = { path = "../../common/procfs/if", version = "0.1.0" }
ref-cast = "1.0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
thiserror = "1.0"
