[package]
name = "below-model"
version = "0.1.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "Model crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
below_derive = { version = "0.1.0", path = "../below_derive" }
below_thrift = { version = "0.1.0", path = "../if" }
cgroupfs = { version = "0.1.0", path = "../../common/cgroupfs" }
hostname = "0.3"
os_info = "=2.0.1"
procfs = { package = "fb_procfs", version = "0.1.0", path = "../../common/procfs" }
regex = "1.4.2"
slog = { version = "2.5", features = ["max_level_debug"] }
