[package]
name = "render"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
description = "An interactive tool to view and record historical system data"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
include = ["src/**/*.rs"]

[dependencies]
common = { path = "../common" }
model = { path = "../model" }
