[package]
name = "below-render"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
description = "Render crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
include = ["src/**/*.rs"]

[dependencies]
common = { package = "below-common", path = "../common", version = "0.1.0" }
model = { package = "below-model", path = "../model", version = "0.1.0" }
