[package]
name = "below-render"
version = "0.1.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "Render crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
license = "Apache-2.0"

[dependencies]
common = { package = "below-common", path = "../common", version = "0.1.0" }
model = { package = "below-model", path = "../model", version = "0.1.0" }
