[package]
name = "below-store"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
description = "Store crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"

[dependencies]
common = { package = "below-common", path = "../common", version = "0.1.0" }
model = { package = "below-model", path = "../model", version = "0.1.0" }
below-thrift = { path = "../if", version = "0.1.0" }
fbthrift = { git = "https://github.com/facebook/fbthrift.git", branch = "master", version = "0.0.1+unstable" }
anyhow = "1.0"
bitflags = "1.2"
bytes = { version = "0.5", features = ["serde"] }
futures = { version = "0.3.5", features = ["async-await", "compat"] }
humantime = "1.3"
maplit = "1.0"
memmap = "0.7"
nix = "0.19"
slog = { version = "2.5", features = ["max_level_debug"] }
static_assertions = "1.1.0"
zstd = "=0.5.3+zstd.1.4.5"

[dev-dependencies]
paste = "1.0"
slog-term = "2.4.2"
tempdir = "0.3"
