[package]
name = "below-store"
version = "0.1.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "Store crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
below_thrift = { version = "0.1.0", path = "../if" }
bitflags = "1.2"
bytes = { version = "1.0", features = ["serde"] }
common = { package = "below-common", version = "0.1.0", path = "../common" }
fbthrift = { version = "0.0.1+unstable", git = "https://github.com/facebook/fbthrift.git", branch = "master" }
futures = { version = "0.3.13", features = ["async-await", "compat"] }
humantime = "1.3"
maplit = "1.0"
memmap = "0.7"
model = { package = "below-model", version = "0.1.0", path = "../model" }
nix = "0.19"
serde = { version = "=1.0.118", features = ["derive", "rc"] }
serde_cbor = "0.11"
slog = { version = "2.5", features = ["max_level_trace"] }
static_assertions = "1.1.0"
zstd = "=0.8.3+zstd.1.5.0"

[dev-dependencies]
paste = "1.0"
slog-term = "2.4.2"
tempdir = "0.3"
