[package]
name = "view"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
description = "An interactive tool to view and record historical system data"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
include = ["src/**/*.rs"]

[dependencies]
common = { path = "../common" }
model = { path = "../model" }
render = { path = "../render" }
store = { path = "../store" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cursive = { version = "0.16.0", default-features = false, features = ["crossterm", "termion"] }
cursive_buffered_backend = "0.4.1"
humantime = "1.3"
libc = "0.2"
once_cell = "1.4"
slog = { version = "2.5", features = ["max_level_debug"] }
toml = "=0.5.7"
