[package]
name = "below-view"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
description = "View crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
include = ["src/**/*.rs"]

[dependencies]
common = { package = "below-common", path = "../common", version = "0.1.0" }
model = { package = "below-model", path = "../model", version = "0.1.0" }
render = { package = "below-render", path = "../render", version = "0.1.0" }
store = { package = "below-store", path = "../store", version = "0.1.0" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cursive = { version = "0.16.0", default-features = false, features = ["crossterm", "termion"] }
cursive_buffered_backend = "0.4.1"
humantime = "1.3"
libc = "0.2"
once_cell = "1.4"
slog = { version = "2.5", features = ["max_level_debug"] }
toml = "=0.5.7"
