[package]
name = "below-view"
version = "0.1.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "View crate for below"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
common = { package = "below-common", version = "0.1.0", path = "../common" }
crossterm = { version = "0.19.0", features = ["event-stream"] }
cursive = { version = "0.16.0", features = ["crossterm", "termion"], default-features = false }
cursive_buffered_backend = "0.5.0"
humantime = "1.3"
libc = "0.2.86"
model = { package = "below-model", version = "0.1.0", path = "../model" }
once_cell = "1.4"
render = { package = "below-render", version = "0.1.0", path = "../render" }
slog = { version = "2.5", features = ["max_level_debug"] }
store = { package = "below-store", version = "0.1.0", path = "../store" }
toml = "=0.5.7"
