[package]
name = "cgroupfs"
version = "0.1.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "A crate for reading cgroupv2 data"
readme = "README"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
license = "Apache-2.0"

[dependencies]
cgroupfs_thrift = { version = "0.1.0", path = "if" }
nix = "0.19"
openat = "0.1.18"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.1"
