[package]
name = "cgroupfs"
version = "0.1.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "A crate for reading cgroupv2 data"
readme = "README"
homepage = "https://github.com/facebookincubator/below"
repository = "https://github.com/facebookincubator/below"
license = "Apache-2.0"

[dependencies]
nix = "0.19"
openat = "0.1.20"
serde = { version = "=1.0.118", features = ["derive", "rc"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.1"
