[package]
name = "procfs"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "Apache-2.0"
description = "A crate for reading procfs"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
readme = "README"
include = ["src/lib.rs"]

[dependencies]
procfs-thrift = { path = "if" }
lazy_static = "1.0"
libc = "0.2"
openat = "0.1.18"
thiserror = "1.0"
threadpool = "1.8.1"

[dev-dependencies]
tempfile = "3.1"
