[package]
name = "fb_procfs"
version = "0.1.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
description = "A crate for reading procfs"
readme = "README"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
license = "Apache-2.0"

[dependencies]
lazy_static = "1.0"
libc = "0.2.86"
openat = "0.1.20"
serde = { version = "=1.0.118", features = ["derive", "rc"] }
thiserror = "1.0"
threadpool = "1.8.1"

[dev-dependencies]
tempfile = "3.1"
