[package]
name = "cgroupfs_thrift"
version = "0.1.0"
authors = ["Daniel Xu <dlxu@fb.com>", "Facebook"]
edition = "2018"
homepage = "https://github.com/facebookincubator/resctl"
repository = "https://github.com/facebookincubator/resctl"
license = "Apache-2.0"
build = "thrift_build.rs"

[lib]
path = "thrift_lib.rs"
test = false
doctest = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1.29"
codegen_includer_proc_macro = { git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master", version = "0.1.0" }
const-cstr = "0.3.0"
fbthrift = { git = "https://github.com/facebook/fbthrift.git", branch = "master", version = "0.0.1+unstable" }
futures = { version = "0.3.5", features = ["async-await", "compat"] }
lazy_static = "1.0"
ref-cast = "1.0.2"
serde = { version = "=1.0.118", features = ["derive", "rc"] }
serde_derive = "1.0"
thiserror = "1.0"

[build-dependencies]
thrift_compiler = { git = "https://github.com/facebookexperimental/rust-shed.git", branch = "master", version = "0.1.0" }
